# comfy-cli

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  DEV_README.md  README.md  conda.listing.txt  data.yaml  main.py  pylint_formatter.sh  pylock.toml  pyproject.toml  pyrightconfig.json  requirement.txt  requirements.txt  setup.cfg  setup.py  test_main.py
.github/: .codecov.yml  codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feature_request.md 
.github/workflows/: build-and-test.yml  publish_package.yml  pylint.yml  pytest.yml  ruff_check.yml  run-on-gpu.yml  test-mac.yml  test-windows.yml
comfy/: __main__.py  cmdline.py  comfy.py  constants.py  env_checker.py  meta_data.py  utils.py
comfy/command/: install.py  run.py
comfy/command/custom_nodes/: command.py
comfy_cli/: __main__.py  cmdline.py  config_manager.py  console.py  constants.py  cuda_detect.py  env_checker.py  extra_model_paths.py  file_utils.py  git_utils.py  logging.py  meta_data.py  pr_cache.py  resolve_python.py  standalone.py  test_cmdline.py  tracking.py  typing.py  ui.py  update.py  utils.py  uv.py  validators.py  workspace_manager.py
comfy_cli/command/: __init__.py  code_search.py  install.py  launch.py  pr_command.py  run.py
comfy_cli/command/custom_nodes/: __init__.py  bisect_custom_nodes.py  cm_cli_util.py  command.py  test_bisect_custom_nodes.py
comfy_cli/command/github/: pr_info.py
comfy_cli/command/models/: models.py
comfy_cli/command/snapshot/: command.py
comfy_cli/registry/: __init__.py  api.py  config_parser.py  types.py  zip.py
docs/: BUG-windows-git-clone-import-error.md  DESIGN-uv-compile.md  ISSUE-manager-gitclone-exit128-windows.md  PRD-uv-compile.md  REPRO-windows-git-clone-pipe-deadlock.md  TESTING-e2e.md  TESTING-manager-override.md
docs/decision-trails/: peer-r1-residual-issues-from-codex-review.decision.json  pr-363-windows-issues-fix.decision.json
scripts/: generate_screenshots.py  install-comfy-cli-redhat.sh  install-comfy-cli-ubuntu.sh
tests/: .coverage  coverage.xml  test_aria2_download.py  test_file_utils.py  test_file_utils_network.py
tests/comfy_cli/: conftest.py  test_aria2_download.py  test_cm_cli_python_resolution.py  test_cmdline_python_resolution.py  test_config_manager.py  test_cuda_detect.py  test_cuda_detect_real.py  test_custom_nodes_python_resolution.py  test_env_checker.py  test_extra_model_paths.py  test_file_utils.py  test_global_python_install.py  test_install.py  test_install_python_resolution.py  test_launch_python_resolution.py  test_models_python_resolution.py  test_resolve_python.py  test_standalone.py  test_tracking.py  test_ui.py  test_update.py  test_utils.py  test_workspace_manager.py
tests/comfy_cli/command/: test_bisect_parse.py  test_cm_cli_util.py  test_code_search.py  test_command.py  test_frontend_pr.py  test_install.py  test_launch_frontend_pr.py  test_manager_gui.py  test_npm_help.py  test_run.py
tests/comfy_cli/command/github/: test_pr.py
tests/comfy_cli/command/models/: test_models.py
tests/comfy_cli/command/nodes/: test_bisect_custom_nodes.py  test_node_init.py  test_node_install.py  test_pack.py  test_publish.py
tests/comfy_cli/registry/: test_api.py  test_config_parser.py
tests/e2e/: test_e2e.py  test_e2e_uv_compile.py  workflow.json
tests/uv/: test_torch_backend_compile.py  test_uv.py
tests/uv/mock_requirements/: requirements.compiled  x_reqs.txt  y_reqs.txt
