[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61" ]

[project]
name = "comfy-cli"
version = "0.0.0"                                            # Will be filled in by the CI/CD pipeline. Check publish_package.py.
description = "A CLI tool for installing and using ComfyUI."
readme = "README.md"
keywords = [ "comfyui", "stable diffusion" ]

license = { text = "GPL-3.0-only" }
maintainers = [
  { name = "Yoland Yan", email = "yoland@drip.art" },
  { name = "James Kwon", email = "hongilkwon316@gmail.com" },
  { name = "Robin Huang", email = "robin@drip.art" },
  { name = "Dr.Lt.Data", email = "dr.lt.data@gmail.com" },
]

requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "charset-normalizer>=3",
  "click<=8.1.8",
  "cookiecutter",
  "gitpython",
  "httpx",
  "mixpanel",
  "packaging",
  "pathspec",
  "psutil",
  "pyyaml",
  "questionary",
  "requests",
  "rich",
  "ruff",
  "semver~=3.0.2",
  "tomlkit",
  "typer>=0.9",
  "typing-extensions>=4.7",
  "uv",
  "websocket-client",
]

optional-dependencies.dev = [ "pre-commit", "pytest", "pytest-cov", "ruff" ]
urls.Repository = "https://github.com/drip-art/comfy-cli.git"
scripts.comfy = "comfy_cli.__main__:main"
scripts.comfy-cli = "comfy_cli.__main__:main"
scripts.comfycli = "comfy_cli.__main__:main"

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "comfy_cli*" ]

[tool.ruff]
target-version = "py39"

line-length = 120
lint.select = [
  "E4", # default
  "E7", # default
  "E9", # default
  "F",  # default
  "I",  # isort-like behavior (import statement sorting)
  "UP", # pyupgrade
]
