[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61" ]

[project]
name = "comfy-cli"
version = "0.0.0"                                            # Will be filled in by the CI/CD pipeline. Check publish_package.py.
description = "A CLI tool for installing and using ComfyUI."
readme = "README.md"
keywords = [ "comfyui", "stable diffusion" ]

license = { text = "GPL-3.0-only" }
maintainers = [
  { name = "Yoland Yan", email = "yoland@drip.art" },
  { name = "James Kwon", email = "hongilkwon316@gmail.com" },
  { name = "Robin Huang", email = "robin@drip.art" },
  { name = "Dr.Lt.Data", email = "dr.lt.data@gmail.com" },
]

requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "charset-normalizer>=3",
  "cookiecutter",
  "gitpython",
  "httpx",
  "mixpanel",
  "packaging",
  "pathspec",
  "psutil",
  "pyyaml",
  "questionary",
  "requests",
  "rich",
  "ruff",
  "semver~=3.0.2",
  "tomlkit",
  "typer>=0.12.5",
  "typing-extensions>=4.7",
  "uv",
  "websocket-client",
]

optional-dependencies.dev = [ "pre-commit", "pytest", "pytest-cov", "ruff" ]
urls.Repository = "https://github.com/Comfy-Org/comfy-cli.git"
scripts.comfy = "comfy_cli.__main__:main"
scripts.comfy-cli = "comfy_cli.__main__:main"
scripts.comfycli = "comfy_cli.__main__:main"

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "comfy_cli*" ]

[tool.ruff]
target-version = "py310"

line-length = 120
lint.select = [
  "E",      # pycodestyle - Error
  "F",      # default
  "I",      # isort-like behavior (import statement sorting)
  "Q",      # flake8-quotes
  "RET504", # Unnecessary assignment to {name} before return statement
  "UP",     # pyupgrade
  "W",      # pycodestyle - Warning
]
lint.extend-ignore = [
  "E501", # Line too long
]
