[metadata]
name = comfy-cli
version = 0.1.0
description = Package for comfy-cli
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/???/comfy-cli
license = GPLv3
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: GNU General Public License v3 (GPLv3)
Operating System :: OS Independent
project_urls =
    GitHub = https://github.com/???/comfy-cli
    Twitter = https://twitter.com/???
    Discord = https://???
    Documentation = https://comfydocs.org/cli

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
include =
  comfy
  comfy.*
exclude =
  tests*

[options.extras_require]
test =
  pytest

[options.entry_points]
console_scripts =
  comfy = comfy.__main__:lets_get_comfy
  comfycli = comfy.__main__:lets_get_comfy
  comfy-cli = comfy.module:lets_get_comfy
